# competitive-programming

./: .gitignore  CMakeLists.txt  README.md  template.cpp  topics.md
Codes/Graphs/: floyd-warshall.cpp
Consulta/: Consulta-  Consulta-.out  contents.tex  contents.txt  notebook.aux  notebook.fdb.latexmk  notebook.fls  notebook.out  src2pdf
Consulta/.GENERATE.PDF/: contents.txt  gen.contents.py
Consulta/Algorithms/: DSU.cpp  Mo.cpp  matrixExpo.cpp
Consulta/Data-Structures/: hldEdge.cpp  hldVertex.cpp  mergeTree.cpp  sqrtDecomposition.cpp  treap.cpp  wavelet.cpp
Consulta/General/: template.cpp
Consulta/Geometry/: basic.cpp
Consulta/Graphs/: 2Sat.cpp  MaxFlowMinCost.cpp  SmallToLarge.cpp  bfs  bfs.cpp  bridges.cpp  centroid.cpp  dinic.cpp  floydWarshall.cpp  kruskal.cpp  kuhn.cpp  lca.cpp  scc.cpp  tarjanLCA.cpp
Consulta/Math/: binaryDivisibleByNumber.cpp  chinese_remainder_theorem.cpp  linearSieve.cpp  mDividesNfac.cpp  miller.rabin.cpp  ntt.cpp  pascalTriangle.cpp  sieve.cpp
Consulta/Tricks/: SOSdp.cpp
Graphs/: bfs.cpp  dfs.cpp
Notebook/: Treino.cpp  contents.txt
Notebook/Algorithms/: DSU.cpp  NOTEPAD.cpp  a.out  binSearch.cpp  binary_search.cpp  crivo_gema.cpp  geometry.cpp  knapsack.cpp  mo.cpp
Notebook/Data Structures/: minQueue  segtree_lazy.cpp  trie.cpp  waveletTree  waveletTree.cpp
Resumos/: 01-Introducao.md  02-Programacao_C-C++.md  03-Arrays_Strings.md  README.md
Treino/: Forbes.cpp
_Notebook/: Graph.java  TODO  a.out  bfs.cpp  dijkstra.cpp  test.cpp
math/: FFT.cpp  Geometry.hpp
utils/: CoordCompression.hpp  int128.hpp
(+3045 files in other folders)
